Fix #112122: Hover color matches with disabled buttons

This is due to blending between inner and text colors.
Instead, copy the text color in `inner` when hovering. This is same as
done for UIList: 7216eb88797c8b268a8b6817c54caee2efdf71a1